# python3sql

./: LICENSE  README.md  pyproject.toml
python3sql/: __init__.py  core.py
