[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python3lib"        
version = "0.1.0"          
authors = [
  { name = "Mingxin", email = "rminghxin@163.com" }
]
description = "简化SQL语句，不再使用繁杂的SQL语句"
long_description = file = "README.md"
long_description_content_type = "text/markdown"
license = { file = "LICENSE" } 
requires-python = ">=3.8"   

dependencies = [
    # "requests>=2.30.0",
    "pymysql"
]

[project.urls]
"Github" = "https://github.com/LMingHXin/python3sql"  