[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python3sql"
version = "0.1.1"
authors = [
  { name = "Mingxin", email = "rminghxin@163.com" }
]
description = "A tool for simplifying complex SQL statements"
requires-python = ">=3.8"
dependencies = [
    "pymysql"
]

[project.urls]
Github = "https://github.com/LMingHXin/python3sql"
